# image_translation

./: .gitignore  README.md  download_data.sh  exercise.ipynb  prepare-exercise.sh  pyproject.toml  setup_TA.sh  setup_student.sh  solution.ipynb  solution.py  utils.py
scripts/: ta_smoke_test.py
