[project]
name = "image-translation-exercise"
version = "0.0.0"
description = "DL@Janelia image translation (virtual staining) exercise — student environment"
requires-python = ">=3.12,<3.13"

# All dependencies for the exercise live here — pyproject.toml is the single
# source of truth. Bump the cytoland git ref below to upgrade VisCy.
#
# TODO(dl-janelia): once viscy/cytoland 0.5.0a* lands on PyPI, replace the
# cytoland git URL with `"cytoland[metrics]>=0.5.0a1"`.
#
# The course AWS AMI is now on NVIDIA driver >=550, so the old cu121 torch
# pins (torch 2.4.1 / torchvision 0.19.1 from the cu121 wheel index) have
# been dropped — torch now resolves to the default PyPI (cu12x) wheels that
# viscy prefers.
dependencies = [
    "torch",
    "torchvision",
    # transformers 5.x changed several import paths viscy 0.x was written
    # against; viscy declares transformers>=4.40 with no upper bound, so pin
    # <5 to keep uv from resolving to 5.x. (Unrelated to the CUDA/torch
    # version — kept after dropping the cu121 pins.)
    "transformers<5",
    "cytoland[metrics] @ git+https://github.com/mehta-lab/VisCy.git@v0.5.0a1#subdirectory=applications/cytoland",
    "cellpose",
    "cmap",
    "torchview",
    "scikit-learn",
    "torchmetrics[detection]",
    "faster-coco-eval",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "jupytext",
    "nbformat",
    "nbconvert",
    # tensorboard's default.py does `import pkg_resources` (from setuptools).
    # Python 3.12 conda envs don't ship setuptools by default anymore, so
    # we add it explicitly.
    "setuptools",
]

[tool.uv]
package = false

# Keep transformers <5 (see the dependency comment above). The torch /
# torchvision cu121 overrides were dropped along with the cu121 wheel index
# now that the course AMI is on driver >=550.
override-dependencies = [
    "transformers<5",
]
