[project]
name = "image-translation-exercise"
version = "0.0.0"
description = "DL@Janelia image translation (virtual staining) exercise — student environment"
requires-python = ">=3.12"

# All dependencies for the exercise live here — pyproject.toml is the single
# source of truth. Bump the cytoland git ref below to upgrade VisCy.
#
# TODO(dl-janelia): once viscy/cytoland 0.5.0a* lands on PyPI, replace the
# cytoland git URL with `"cytoland[metrics]>=0.5.0a1"`.
#
# torch / torchvision / transformers are intentionally unpinned — they
# resolve to current PyPI (cu13) wheels, which work on the course machines.
# NOTE: torch ships its own CUDA libs. If a system CUDA on LD_LIBRARY_PATH
# (e.g. /usr/local/cuda) shadows them, the first cuBLASLt call aborts with
# "Cannot load symbol cublasLtGetVersion". The fix belongs in the AWS AMI —
# it must NOT prepend /usr/local/cuda/lib64 to LD_LIBRARY_PATH (see
# scripts/diagnose_cublas.sh). Not worked around here.
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "cytoland[metrics] @ git+https://github.com/mehta-lab/VisCy.git@v0.5.0a1#subdirectory=applications/cytoland",
    "cellpose",
    "cmap",
    "torchview",
    "scikit-learn",
    "torchmetrics[detection]",
    "faster-coco-eval",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "jupytext",
    "nbformat",
    "nbconvert",
    # tensorboard's default.py does `import pkg_resources` (from setuptools).
    # Python 3.12 conda envs don't ship setuptools by default anymore, so
    # we add it explicitly.
    "setuptools",
]

[tool.uv]
package = false
